--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-if": "^2.0.2",
     "gulp-minify-css": "^1.2.4",
     "gulp-pug": "^3.3.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "gulp-sitemap": "^4.2.0"
   }
 }
