--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-if": "^2.0.2",
+    "gulp-minify": "0.0.15",
     "gulp-minify-css": "^1.2.4",
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
