--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seieibob.github.io",
+  "name": "colejd.github.io",
   "version": "1.0.0",
   "description": "My website",
   "main": "",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/seieibob/seieibob.github.io.git"
+    "url": "git+https://github.com/colejd/colejd.github.io.git"
   },
   "author": "Jonathan Cole",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/seieibob/seieibob.github.io/issues"
+    "url": "https://github.com/colejd/colejd.github.io/issues"
   },
-  "homepage": "https://github.com/seieibob/seieibob.github.io#readme",
+  "homepage": "https://github.com/colejd/colejd.github.io#readme",
   "devDependencies": {
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
