--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
     "gulp-sitemap": "^4.2.0"
+  },
+  "dependencies": {
+    "npm": "^5.7.1"
   }
 }
